# rag-research-assistant

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  demo.py  instructions.md  pyproject.toml  requirements-dev.txt  requirements.txt
data/: artificial_intelligence.txt
src/: __init__.py  app.py  crew.py  main.py  tools.py  vectordb.py
tests/: test_main.py  test_tools.py  test_vectordb.py
